# EvoXAI

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  requirements.txt  requirements_core.txt  run_test.py  sync_github.bat
.github/workflows/: deploy.yml
agents/: agent.py  population.py
backtest/: parallel_runner.py  vectorbt_engine.py
causal/: effect_estimator.py  strategy_validator.py
dashboard/: app.py
data/: market_data_fetcher.py
db/: schema.sql
evolution/: engine.py
features/: feature_engineer.py
knowledge/: knowledge_graph.py  paper_parser.py
live/: paper_trader.py
online/: adaptive_selector.py  drift_detector.py  online_learner.py
orchestrator/: main.py
proto/: trading.proto
regime/: regime_detector.py
research/: backtest.jl
risk/: risk_manager.py
services/cpp/: CMakeLists.txt  engine.hpp
services/go/: go.mod
services/go/matching/: engine.go
services/java/: pom.xml
services/java/src/: PortfolioManager.java
services/rust/: Cargo.toml
services/rust/src/: main.rs
strategies/: dna.py  style_router.py
strategies/generators/: ict.py  intraday.py  scalping.py  smc.py  snr.py  swing.py
tests/: test_evolution.py
xai/: lime_explainer.py  shap_explainer.py  text_generator.py
