[package]
name = "evoxai-market-data"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.10" # gRPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam = "0.8" # lock-free channels
redis = { version = "0.23", features = ["tokio-comp"] }
